Implemented user related graphql schema and endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8081
+spring.graphql.graphiql.enabled=true
+spring.graphql.cors.allowed-origins=*
+spring.graphql.schema.printer.enabled=true
+logging.level.org.springframework.graphql= TRACE
+spring.graphql.websocket.path=/graphql
 
